k8s/postgres-endpoint.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
---
kind: Endpoints
apiVersion: v1
metadata:
 name: postgres
subsets:
  - addresses:
      - ip: 192.168.56.98
    ports:
      - port: 5432
