k8s/ingress-nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: remi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: video-sharing-fe
          servicePort: 80
